[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Leonardo Cavaletti <impeto.blu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
rich = "^9.10.0"
pycoingecko = "^1.4.0"
krakenex = "^2.1.0"
toml = "^0.10.2"
click = "^7.1.2"
click-shell = {extras = ["windows"], version = "^2.0"}

[tool.poetry.dev-dependencies]
taskipy = "^1.6.0"
black = "^20.8b1"

[tool.taskipy.tasks]
start = "python cryptodex"
freeze = "poetry export -f requirements.txt > requirements.txt"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
